[project]
name = "qq2mc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "aio-mc-rcon>=3.4.2",
    "napcat-sdk>=0.4.3",
]


[tool.bot]
mc_server_host = "mc-server"
mc_server_port = 25575
mc_server_password = "QeGkUJUWsChKWRaDj6Fd"
napcat_url = "ws://napcat:3001"
napcat_token = "sd37f4fb3Hj87vevcv4C"
target_group_id = 948251336